tests/negative/traits/inherit_no_super_impl.orng
// inherit_no_super_impl.orng:13:5: error: the type `Int` does not implement the trait `A`
// impl B for Int {
//    ^
// 
trait A {
    fn a(self) -> Int
}

trait B: A {
    fn b(self) -> Int
}

impl B for Int {
    fn b(self) -> Int {
        self + 95
    }
}

fn get_result[T: B](t: T) -> Int {
    t.>a().>b()
}

fn main() -> Int {
    get_result[Int](150)
}
